--- a/Crachá/CSS/style.css
+++ b/Crachá/CSS/style.css
@@ -10,7 +10,7 @@ header{
     width: 100%;
 }
 h1{
-    background-color: blue;
+    background-color: #0f1a4b;
     width: 100%;
     margin: 0;
     font-size: 3em;
@@ -20,14 +20,14 @@ h1{
     color: white;
 }
 .orange{
-    color: orange;
+    color: #ff8a00;
 }
 #nome{
     margin-bottom: 10px;
     width: 300px;
 }
 #cracha{
-    border: 1.5px solid blue;
+    border: 1.5px solid #0f1a4b;
     font-size: 2em;
     padding: 10px;
     border-radius: 10px;
