--- a/SplitTheString/CSS/style.css
+++ b/SplitTheString/CSS/style.css
@@ -9,7 +9,7 @@ header{
     width: 100%;
 }
 h1{
-    background-color: blue;
+    background-color: #0f1a4b;
     width: 100%;
     margin: 0;
     font-size: 3em;
@@ -19,14 +19,14 @@ h1{
     color: white;
 }
 .orange{
-    color: orange;
+    color: #ff8a00;
 }
 #nome{
     margin-bottom: 10px;
     width: 300px;
 }
 #string{
-    border: 1.5px solid blue;
+    border: 1.5px solid #0f1a4b;
     font-size: 3em;
     padding: 30px;
     border-radius: 10px;
@@ -35,7 +35,7 @@ h1{
     display:none;
 }
 #numero{
-    border: 1.5px solid purple;
+    border: 1.5px solid #ff8a00;
     font-size: 3em;
     padding: 30px;
     border-radius: 10px;
