--- a/SplitTheString/CSS/style.css
+++ b/SplitTheString/CSS/style.css
@@ -44,3 +44,12 @@ h1{
 #numero:empty{
     display:none;
 }
+#botao{
+    background-color: #0f1a4b;
+    color:#ff8a00;
+    border-radius: 5px;
+}
+#botao:hover{
+    background-color: #ff8a00;
+    color: #0f1a4b;
+}
